# GnomeFinance

./: README.md  meson.build  org.gnome.finance.json
data/: meson.build  org.gnome.finance.appdata.xml.in  org.gnome.finance.desktop.in  org.gnome.finance.gschema.xml
po/: POTFILES  meson.build
src/: gnome-finance.gresource.xml  main-window.cpp  main-window.h  main.cpp  meson.build
